--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,15 @@ header {
 }
 .title {
     color: #ada59b;
+    font-size: 40px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-main {
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #181a1b;
+    color: #bbb6ad;
+}
+.main {
     margin-top: 40px;
     text-align: center;
 }
@@ -34,5 +40,17 @@ main {
     margin-bottom: 10px;
 }
 #rule {
-    font-size: 30px;
+    font-size: 25px;
+}
+#scoring {
+    font-size: 25px;
+}
+.score-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 350px;
+}
+.selection {
+    font-size: 120px;
 }
