--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
 
-:root {
-    --primary-light: #ddd;
-    --primary-dark: #222831;
-    --secondary-dark: #393e46;
-    --secondary-dark-hover: #4a4f57;
-    --secondary-dark-active: #5b5f68;
-    --header: #111720;
-    --primary-yellow: #fac650;
+html {
+    position: relative;
+    min-height: 100%;
   }
   
   *,
@@ -50,7 +45,59 @@ body {
     align-items: center;
     justify-content: space-between;
     max-width: 350px;
+    padding: 10px;
+    margin: 0 auto;
 }
 .selection {
     font-size: 120px;
+}
+#playerScore {
+    font: 22px;
+    font-weight: bold;
+}
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+button {
+    border-color: currentColor;
+    outline-color: currentColor;
+
+}
+.btn {
+    background-color: #4a4f57;
+}
+.btn-square {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+}
+.sign {
+    font-size: 100px;
+}
+.footer {
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 22px;
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    padding: 32px;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 30px;
+    /* no idea what these are */
+    z-index: 1;
+    user-select: none;
+    transition: 200ms ease-in-out;
 }
