--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,13 @@ button {
     font-size: 40px;
     font-weight: bold;
 }
+.overlay {
+    background-color: #000000;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+}
