--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
 .main {
     margin-top: 40px;
     text-align: center;
+    margin-bottom: 40px;
 }
 .scoreboard {
     margin-bottom: 10px;
